Fixed bug #34137 (assigning array element by reference causes binary mess)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_1@194830 c90b9560-bf6c-de11-be94-00142212c4b1